--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 jumbotron mb-3 team-heading">
-                <h1 class="text-center">My Team</h1>
+                <h1 class="text-center">Team Management</h1>
             </div>
         </div>
     </div>
@@ -25,53 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Manager</h2>
+        <h2 class="card-title">Paul</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1234</li>
-            <li class="list-group-item">Email: <a href="mailto:Manager@company.com">Manager@company.com</a></li>
+            <li class="list-group-item">ID: 123</li>
+            <li class="list-group-item">Email: <a href="mailto:paul@company.com">paul@company.com</a></li>
             <li class="list-group-item">Office number: 1</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Engineer</h2>
+        <h2 class="card-title">Dennis</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1235</li>
-            <li class="list-group-item">Email: <a href="mailto:engineer@company.com">engineer@company.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/engineer" target="_blank" rel="noopener noreferrer">engineer</a></li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Scott</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 28374</li>
-            <li class="list-group-item">Email: <a href="mailto:scott@company.com">scott@company.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/scottsharris-az" target="_blank" rel="noopener noreferrer">scottsharris-az</a></li>
+            <li class="list-group-item">ID: 234</li>
+            <li class="list-group-item">Email: <a href="mailto:dennis@company.com">dennis@company.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/dennisgit" target="_blank" rel="noopener noreferrer">dennisgit</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Intern</h2>
+        <h2 class="card-title">Greg</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 12783</li>
-            <li class="list-group-item">Email: <a href="mailto:intern@company.com">intern@company.com</a></li>
-            <li class="list-group-item">School: UArizona</li>
+            <li class="list-group-item">ID: 345</li>
+            <li class="list-group-item">Email: <a href="mailto:greg@company.com">greg@company.com</a></li>
+            <li class="list-group-item">School: University of Arizona</li>
         </ul>
     </div>
 </div>
